@@ -1,3 +1,14 @@
+2004-05-24  Ken Kocienda  <kocienda@apple.com>
+
+        Reviewed by Richard
+
+        * khtml/xml/dom_selection.cpp:
+        (DOM::Selection::toRange): Improved the code to return ranges that are
+        convenient to use by WebKit code which needs to perform text-editor-like
+        operations with ranges. Comments in the code describe this behavior.
+        (DOM::Selection::nodeIsBeforeNode): Make this method const.
+        * khtml/xml/dom_selection.h: Ditto.
+
 2004-05-24  Chris Blumenberg  <cblu@apple.com>
 
 	Improved editing via drag.
